# battleship_bncc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  battleship.c  battleship.h  main.c
test/: CMakeLists.txt  test.cpp
